OpenAI MCP Tool Support (#6)
* Enhance MCP tool integration and update dependencies

- Updated `openai` dependency version in `pyproject.toml`.
- Modified `get_tracer_provider` to include `agent_framework` parameter for better context in tracing.
- Adjusted `import_and_wrap_tools` to return both tools and MCP servers for OpenAI and Smolagents frameworks.
- Implemented `merge_mcp_tools` function to consolidate tools from MCP servers.
- Enhanced error handling in `SmolagentsMCPToolsManager` for missing requested tools.
- Updated tests to reflect changes in function signatures and ensure compatibility with new MCP tool management.

* lint

* add mcp test

* Refactor test cases for OpenAI agent to ensure consistent formatting of MCP server lists

- Added trailing commas in MCP server lists for better readability and consistency across test cases.
- Updated test assertions to maintain formatting standards.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ smolagents = [
 ]
 
 openai = [
-  "openai-agents",
+  "openai-agents>=0.0.7",
   "openinference-instrumentation-openai-agents"
 ]
 
