Langchain support for MCP (theoretically) (#7)
* Enhance MCP tool integration and update dependencies

- Updated `openai` dependency version in `pyproject.toml`.
- Modified `get_tracer_provider` to include `agent_framework` parameter for better context in tracing.
- Adjusted `import_and_wrap_tools` to return both tools and MCP servers for OpenAI and Smolagents frameworks.
- Implemented `merge_mcp_tools` function to consolidate tools from MCP servers.
- Enhanced error handling in `SmolagentsMCPToolsManager` for missing requested tools.
- Updated tests to reflect changes in function signatures and ensure compatibility with new MCP tool management.

* lint

* add mcp test

* Refactor test cases for OpenAI agent to ensure consistent formatting of MCP server lists

- Added trailing commas in MCP server lists for better readability and consistency across test cases.
- Updated test assertions to maintain formatting standards.

* Add Langchain MCP tools manager and update agent loading functions

- Added `LangchainMCPToolsManager` for managing MCP tools specific to LangChain agents.
- Updated function names from `load_lanchain_agent` to `load_langchain_agent` for consistency.
- Included `langchain-mcp-adapters` dependency in `pyproject.toml`.
- Adjusted imports and test cases to reflect the new function naming and manager integration.

* lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ langchain = [
   "langchain",
   "langchain-openai>=0.3.10",
   "langgraph",
+  "langchain-mcp-adapters>=0.0.3",
   "openinference-instrumentation-langchain"
 ]
 smolagents = [
