--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
   "fire",
   "loguru",
   "markdownify",
-  "mcp>=1.5.0",
   "opentelemetry-exporter-otlp",
   "opentelemetry-sdk",
   "pydantic",
@@ -36,6 +35,10 @@ smolagents = [
 openai = [
   "openai-agents>=0.0.7",
   "openinference-instrumentation-openai-agents"
+]
+
+mcp = [
+  "mcp>=1.5.0"
 ]
 
 docs = [
