Add `llama_index` framework (#11)
* Add `llama_index` framework

* Fix tests. Add `_agent_missing` tests.

* fix(tests): Add missing `llama_index` dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,12 @@ langchain = [
   "langchain-mcp-adapters>=0.0.3",
   "openinference-instrumentation-langchain"
 ]
+
+llama_index = [
+  "llama-index",
+  "openinference-instrumentation-llama-index"
+]
+
 smolagents = [
   "smolagents[litellm,mcp]>=1.10.0",
   "openinference-instrumentation-smolagents>=0.1.4"
