docs: Use mozilla.ai logo instead of blueprints

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,8 +24,8 @@ theme:
       toggle:
         icon: material/lightbulb-outline
         name: Switch to light mode
-  logo: images/Blueprint-logo-white.png
-  favicon: images/Blueprint-logo-black-flavicon.png
+  logo: images/mozilla.ai_white.png
+  favicon: images/mozilla.ai_black.png
   extra_css:
     - assets/custom.css
   features:
