Evaluation codebase Comes to Any-Agent (#40)
* Move evaluation code into any-agent

* Docs!

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Instructions: instructions.md
   - Tracing: tracing.md
   - API Reference: api.md
+  - Agent Evaluation: evaluation.md
 
 theme:
   name: material
