--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,8 @@ nav:
   - Tools: tools.md
   - Instructions: instructions.md
   - Tracing: tracing.md
+  - Evaluation: evaluation.md
   - API Reference: api.md
-  - Agent Evaluation: evaluation.md
 
 theme:
   name: material
