feat(llama_index): Use `LiteLLM` as default model class. (#48)
Helps standardizing the default `model_id` behavior.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ langchain = [
 
 llama_index = [
   "llama-index",
+  "llama-index-llms-litellm",
   "platformdirs>=4.3.7",
   "openinference-instrumentation-llama-index"
 ]
