--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,10 @@ mcp = [
   "mcp>=1.5.0"
 ]
 
+all = [
+  "any-agent[langchain,llama_index,smolagents,openai,mcp]"
+]
+
 docs = [
   "mkdocs",
   "mkdocs-material",
@@ -64,6 +68,7 @@ tests = [
 ]
 
 dev = [
+  "any-agent[docs,tests]",
   "pre-commit",
 ]
 
