feat: Add support for Google Agent Development Kit (ADK) (#52)
* feat: Add support for Google Agent Development Kit (ADK)

- Use `LiteLlm` as default model class.
- Implement managed_agents using "AgentTool" and `sub_agents` (when handoff=True).

* build: Add `google` to `all` group.

* docs: Include `Google ADK` in frameworks.

* tests(google): Fix default `instruction` value

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+google = [
+  "google-adk"
+]
+
 langchain = [
   "langchain",
   "langchain-openai>=0.3.10",
@@ -52,7 +56,7 @@ mcp = [
 ]
 
 all = [
-  "any-agent[langchain,llama_index,smolagents,openai,mcp]"
+  "any-agent[google,langchain,llama_index,smolagents,openai,mcp]"
 ]
 
 docs = [
