feat(langchain): Use `LiteLLM` as default `model_type` (#60)
* feat(langchain): Use `LiteLLM` as default `model_type`

* fix LangchainAgent._get_model docstring.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ google = [
 
 langchain = [
   "langchain",
-  "langchain-openai>=0.3.10",
+  "langchain-litellm",
   "langgraph",
   "langchain-mcp-adapters>=0.0.3",
   "openinference-instrumentation-langchain"
