--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,9 @@ google = [
 langchain = [
   "langchain",
   "langchain-litellm",
-  "langgraph",
   "langchain-mcp-adapters>=0.0.3",
+  "langgraph",
+  "langgraph-swarm",
   "openinference-instrumentation-langchain"
 ]
 
