pytest run the code in the docs (#93)
* Doesn't run indented code but yes to the other stuff

* fix path

* run doc tests in ci

* run doc tests first

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,12 +69,14 @@ docs = [
   "mkdocs",
   "mkdocs-material",
   "mkdocstrings-python",
+  "mkdocs-include-markdown-plugin>=7.1.5",
 ]
 
 tests = [
   "pytest>=8,<9",
   "pytest-sugar>=0.9.6",
   "debugpy>=1.8.13",
+  "mktestdocs>=0.2.4",
 ]
 
 dev = [
