feat(lint): add stricter checks from ruff (#97)
- Updated type hints for better clarity and consistency across various modules.
- Reorganized import statements for better structure and adherence to PEP8 guidelines.
- Simplified error messages and exception handling for clarity.
- Improved the implementation of telemetry processors to streamline data extraction.
- Enhanced MCP server tools with better error handling and tool management.
- Refactored web browsing tools for improved content truncation and error reporting.
- Updated test cases for consistency and clarity, ensuring better coverage and maintainability.
- Removed redundant code and comments to enhance overall code cleanliness.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,3 +101,33 @@ namespaces = false
 disable = [
     "import-outside-toplevel",
 ]
+
+[tool.ruff.lint]
+ignore = [
+  "D",
+  "FBT",
+  "COM",
+  "ANN",
+  "ARG",
+  "S101",
+  "E501",
+  "INP001",
+  "PERF",
+  "PLR",
+  "SIM",
+  "PTH",
+  "DTZ005",
+  "BLE001",
+  "TRY004",
+  "S113",
+  "PLW2901",
+  "C901",
+  "ERA001",
+  "SLF001",
+  "PD901",
+  "PLR0912",
+  "PLR0913",
+  "N999",
+  "B024",
+]
+extend-select = ["ALL"]
