feat(lint): add strict mypy checks (#95)
* feat(lint): add strict mypy checks

* fix(test): fix failing tests for docs and unit tests

* fix(test): fix failing documentation tests

* fix(mypy): enforce stricter type checking rules

- Add additional mypy configuration options to enhance type
  checking, ensuring better code quality and reducing potential
  runtime errors.

* fix(pre-commit): update dependencies and remove unused ones

* fix(pyproject): correct package-data entry

* fix(linter): fix formatting issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,18 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.15.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - types-requests
+          - types-pyyaml
+          - pytest
+          - pydantic
+          - .[dev, all]
+
   - repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
     hooks:
