Add exhaustive checks for enums (#96)
* feat(tracing): enhance tracing setup with instrumenters

- Introduce `Instrumenter` protocol for agent framework instrumentation.
- Implement `get_instrumenter_by_framework` to return appropriate
  instrumentor based on the agent framework.
- Update `setup_tracing` to utilize the new instrumenters for
  enhanced tracing capabilities.

* refactor(any_agent): streamline agent framework selection

- Replace conditional imports with a static method to
  determine agent types based on the framework.
- Simplify the `create` method by utilizing the new
  `_get_agent_type_by_framework` method for better
  readability and maintainability.

* linter fixes after merge

* Only pass in a callable or MCPTool (#98)

* simplify tool loading

* work around smolagents bug

* fix unit test

* add verification for callables that they have some basic properties

* No more need to refresh tools

* rename file

* refactor(config): update AgentFramework to use auto()

- Replace explicit string values in AgentFramework with
  auto() for better maintainability and consistency.
- Introduce from_string method for converting string inputs
  to AgentFramework enum values.
- Update references throughout the codebase to use
  LLAMA_INDEX instead of LLAMAINDEX for consistency.
- Add tests to validate framework creation with both enum
  and string inputs.

* refactor(docs): simplify framework initialization for telemetry and tracing

- Replace instances of AgentFramework initialization with string
  assignments for framework in documentation files.
- Update related code to handle string inputs for agent frameworks
  consistently across the codebase.

* Fix tests

---------

Co-authored-by: David de la Iglesia Castro <daviddelaiglesiacastro@gmail.com>
Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>
Co-authored-by: Nathan Brake <nathan@mozilla.ai>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,10 @@ repos:
           - types-pyyaml
           - pytest
           - pydantic
-          - .[dev, all]
+          - openinference-instrumentation-langchain
+          - openinference-instrumentation-llama-index
+          - openinference-instrumentation-smolagents
+          - openinference-instrumentation-openai-agents>=0.1.5
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
