All providers use LiteLLM under the hood. (#124)
* You get a LiteLLM, you get a LiteLLM, you get a LiteLLM!

* http clone

* use an arg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ smolagents = [
 ]
 
 openai = [
-  "openai-agents>=0.0.7",
+    "openai-agents[litellm] @ git+https://github.com/openai/openai-agents-python.git", # Can replace with version once package with litellm is released
   "openinference-instrumentation-openai-agents>=0.1.5"
 ]
 
