--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,13 +33,7 @@ repos:
         additional_dependencies:
           - types-requests
           - types-pyyaml
-          - pytest
-          - pydantic
-          - openinference-instrumentation-langchain
-          - openinference-instrumentation-llama-index
-          - openinference-instrumentation-smolagents
-          - openinference-instrumentation-openai-agents>=0.1.5
-
+          - any-agent[dev, all]
 
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.4.1"
