--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ openai = [
 ]
 
 agno = [
-  "agno>=1.3.4",
+  "agno<=1.3.5", # https://github.com/mozilla-ai/any-agent/issues/155
   "litellm"
 ]
 
@@ -141,3 +141,9 @@ strict = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 follow_untyped_imports = true
+
+
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
