chore: Enable and fix pydocstyle (D) rules. (#157)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,8 @@ disable = [
 
 [tool.ruff.lint]
 ignore = [
-  "D",
+  "D100",  # We don't use module docstrings
+  "D104",  # We don't use package docstrings
   "FBT",
   "COM",
   "ANN",
@@ -135,6 +136,14 @@ ignore = [
   "B024",
 ]
 extend-select = ["ALL"]
+
+[tool.ruff.lint.per-file-ignores]
+"src/any_agent/config.py" = ["D101", "D102"]
+"src/any_agent/evaluation/*" = ["D101", "D103", "D107"]  # TODO: Revisit when working on evaluation
+"src/any_agent/evaluation/evaluators/*" = ["D103", "D107"]
+"src/any_agent/frameworks/*" = ["D107", "D102"]
+"src/any_agent/tools/mcp/*" = ["D101"]
+"tests/*" = ["D"]
 
 [tool.mypy]
 strict = true
