--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,12 @@ mcp = [
   "mcp>=1.5.0"
 ]
 
+tinyagent = [
+  "litellm"
+]
+
 all = [
-  "any-agent[google,langchain,llama_index,smolagents,openai,agno,mcp]"
+  "any-agent[google,langchain,llama_index,smolagents,openai,agno,mcp,tinyagent]",
 ]
 
 docs = [
