docs: Create `agents` page. Add separate page for each framework. (#191)
* docs: Create `agents` page. Add separate page for each framework.

* Add RunnableConfig info in langchain page

* Move Model ID section up

* Remove outdated links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,17 @@ repo_name: any-agent
 
 nav:
   - Intro: index.md
-  - Frameworks: frameworks.md
-  - Tools: tools.md
+  - Agents: agents.md
+  - Frameworks:
+    - Agno: frameworks/agno.md
+    - Google ADK: frameworks/google_adk.md
+    - Langchain: frameworks/langchain.md
+    - LlamaIndex: frameworks/llama_index.md
+    - OpenAI Agents SDK: frameworks/openai.md
+    - smolagents: frameworks/smolagents.md
+    - TinyAgent: frameworks/tinyagent.md
   - Instructions: instructions.md
+  - Tools: tools.md
   - Tracing: tracing.md
   - Evaluation: evaluation.md
   - API Reference: api.md
