--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "duckduckgo_search",
   "fire",
   "litellm",
+  "mcp>=1.5.0",
   "markdownify",
   "opentelemetry-exporter-otlp",
   "opentelemetry-sdk",
@@ -44,26 +45,21 @@ llama_index = [
 ]
 
 smolagents = [
-  "smolagents[litellm,mcp]>=1.14.0",
+  "smolagents[mcp]>=1.14.0",
   "openinference-instrumentation-smolagents"
 ]
 
 openai = [
-  "openai-agents[litellm]>=0.0.12",
+  "openai-agents>=0.0.12",
   "openinference-instrumentation-openai-agents>=0.1.5"
 ]
 
 agno = [
-  "agno<=1.3.5", # https://github.com/mozilla-ai/any-agent/issues/155
-  "litellm"
-]
-
-mcp = [
-  "mcp>=1.5.0"
+  "agno>=1.4.4",
 ]
 
 all = [
-  "any-agent[google,langchain,llama_index,smolagents,openai,agno,mcp]",
+  "any-agent[google,langchain,llama_index,smolagents,openai,agno]",
 ]
 
 docs = [
