--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ tests = [
   "pytest>=8,<9",
   "pytest-sugar>=0.9.6",
   "pytest-asyncio>=0.26.0",
+  "pytest-lazy-fixtures>=1.1.2",
   "debugpy>=1.8.13",
   "mktestdocs>=0.2.4",
 ]
