Unit Testing of Evaluation Framework (#184)
* put it into a runner class

* updates to adding files

* refactor: Rename `telemetry` to `tracing`.
Move `any_agent/tracing.py` to `any_agent/tracing/tracer.py`.

* wip

* run pre-commit

* Set default _instrumenter property

* mypy stuff

* fix missing evaluation updates

* docs updates to reflect tracing enabled as default

* fixes from merge

* unit tests!

* lint

* lint

* patch running the evaluationRunner

* updates from PR

* mypy saves the day by finding bad function name

---------

Co-authored-by: daavoo <daviddelaiglesiacastro@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "requests",
   "rich",
   "evaluate",
+  "fire",
 ]
 
 [project.optional-dependencies]
@@ -59,7 +60,7 @@ agno = [
 ]
 
 all = [
-  "any-agent[google,langchain,llama_index,smolagents,openai,agno]",
+  "any-agent[google,langchain,llama_index,smolagents,openai,agno,mcp]",
 ]
 
 docs = [
@@ -154,3 +155,7 @@ follow_untyped_imports = true
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+
+
+[project.scripts]
+any-agent-evaluate = "any_agent.evaluation.cli:main"
