docs: Revisit API Reference. (#212)
- Split into subpages.
- Replace config info with links to the API Reference.
- Remove `Params` suffix from MCP config.
- Add `_` prefix to private methods.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,11 @@ nav:
   - Tools: tools.md
   - Tracing: tracing.md
   - Evaluation: evaluation.md
-  - API Reference: api.md
+  - API Reference:
+    - Agent: api/agent.md
+    - Config: api/config.md
+    - Tools: api/tools.md
+    - Tracing: api/tracing.md
 
 theme:
   name: material
