--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ tests = [
   "pytest-sugar>=0.9.6",
   "pytest-asyncio>=0.26.0",
   "pytest-lazy-fixtures>=1.1.2",
+  "pytest-timeout>=2.4.0",
   "debugpy>=1.8.13",
   "mktestdocs>=0.2.4",
 ]
@@ -155,6 +156,7 @@ follow_untyped_imports = true
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+timeout = 300
 
 
 [project.scripts]
