feat: add uv to create envs for pre-commit (#186)
* feat: add uv to create envs for pre-commit

* feat: convert the pipeline to a more uv-centric approach

* fix: test using uv default cache

* chore: trigger lint to validate caching

* fix: test without any explicit caching

* chore: add comment to remind testing before adding caching

* chore: add verbose flag to pre-commit

---------

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,18 +15,16 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install the latest version of uv and set the python version to 3.13
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: '3.11'
+          python-version: 3.13
+          activate-environment: true
 
       - name: Install pre-commit
-        run: pip install pre-commit
+        run: uv sync --extra lint
 
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/pre-commit/
-          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
-
+      # In case of considering adding caching, check the following PR first:
+      # https://github.com/mozilla-ai/any-agent/pull/186
       - name: pre-commit
-        run: pre-commit run --all-files
+        run: uv run pre-commit run --all-files --verbose
