feat: Add initial implementation of `serving` module. (#210)
* feat: Add initial implementation of `serving` module.

* bring back str type

* Add serving optional dep group

* Lazy import `_get_a2a_server`

* fix typo

* Handle MCP tools

* Add `serving` as part of `all`

* Add serving docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
   - Tools: tools.md
   - Tracing: tracing.md
   - Evaluation: evaluation.md
+  - Serving (A2A): serving.md
   - API Reference:
     - Agent: api/agent.md
     - Config: api/config.md
