--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+serving = [
+  "a2a-samples"
+]
+
 google = [
   "google-adk>=0.3.0"
 ]
@@ -60,7 +64,7 @@ agno = [
 ]
 
 all = [
-  "any-agent[google,langchain,llama_index,smolagents,openai,agno,mcp]",
+  "any-agent[google,langchain,llama_index,smolagents,openai,agno,serving]",
 ]
 
 docs = [
@@ -113,6 +117,8 @@ disable = [
 
 [tool.ruff.lint]
 ignore = [
+  "TD",
+  "FIX",
   "D100",  # We don't use module docstrings
   "D104",  # We don't use package docstrings
   "FBT",
@@ -156,13 +162,13 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 follow_untyped_imports = true
 
-
-
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
 timeout = 300
 
-
 [project.scripts]
 any-agent-evaluate = "any_agent.evaluation.cli:main"
+
+[tool.uv.sources]
+a2a-samples = { git = "https://github.com/google/A2A", subdirectory = "samples/python" }
