docs: Update `logo` and `site_name`.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Any Agent
+site_name: any-agent
 
 repo_url: https://github.com/mozilla-ai/any-agent
 repo_name: any-agent
@@ -40,7 +40,7 @@ theme:
       toggle:
         icon: material/lightbulb-outline
         name: Switch to light mode
-  logo: images/mozilla.ai_white.png
+  logo: images/any-agent-logo-mark.png
   favicon: images/any-agent_favicon.png
   extra_css:
     - assets/custom.css
