--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install
         run: |
-          uv pip install -e '.[all,tests]'
+          uv sync --group tests --extra all
           uv pip install 'git+https://github.com/google/A2A#subdirectory=samples/python'
 
       - name: Run Documentation tests
