--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,7 @@ tests = [
   "pytest-asyncio>=0.26.0",
   "pytest-lazy-fixtures>=1.1.2",
   "pytest-timeout>=2.4.0",
+  "pytest-xdist>=3.6.1",
   "debugpy>=1.8.13",
   "mktestdocs>=0.2.4",
 ]
