--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,8 @@ repos:
         additional_dependencies:
           - types-requests
           - types-pyyaml
+          - pytest
+          - google-adk==0.5.0 # until https://github.com/mozilla-ai/any-agent/issues/287 is resolved
           - any-agent[dev, all]
 
   - repo: https://github.com/codespell-project/codespell
