--- a/pyproject.toml
+++ b/pyproject.toml
@@ -170,6 +170,7 @@ tests = [
   "pytest-xdist>=3.6.1",
   "debugpy>=1.8.13",
   "mktestdocs>=0.2.4",
+  "syrupy>=4.9.1",
 ]
 
 # For completeness, but 'uv sync --group dev' currently installs the others too.
