Add snapshot testing to Github Action (#292)
* add snapshot tests

* eupdate snapshots

* ignore the snapshots

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
           - '--fix=lf'
       - id: sort-simple-yaml
       - id: trailing-whitespace
+        exclude: \.ambr$
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: "v0.11.10"
