--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,6 +38,9 @@ jobs:
       - name: Run Unit tests
         run: pytest -v tests/unit
 
+      - name: Run Snapshot tests
+        run: pytest -v tests/snapshots
+
       - name: Run Integration tests (parallel with xdist)
         if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch' }}
         env:
