--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,7 @@ extend-select = ["ALL"]
 "src/any_agent/frameworks/*" = ["D107", "D102"]
 "src/any_agent/tools/mcp/*" = ["D101"]
 "tests/*" = ["D"]
+"*.ipynb" = ["T201"]
 
 [tool.mypy]
 strict = true
@@ -154,6 +155,7 @@ docs = [
   "mkdocs-material",
   "mkdocstrings-python",
   "mkdocs-include-markdown-plugin>=7.1.5",
+  "mkdocs-jupyter>=0.25.1",
 ]
 
 lint = [
