Pre-Commit should use local code for type stubs and package versions, not the last published any-agent (#310)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,16 +27,27 @@ repos:
           - "--exit-non-zero-on-fix"
       - id: ruff-format
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.15.0"
+  - repo: local
+    # Thanks to https://jaredkhan.com/blog/mypy-pre-commit
+    # We do not use pre-commit/mirrors-mypy,
+    # as it is difficult to configure to run
+    # with the dependencies correctly installed.
     hooks:
       - id: mypy
+        name: mypy
+        entry: "./scripts/run-mypy.sh"
+        language: python
+        language_version: python3.13
         additional_dependencies:
+          - mypy==1.15.0
+          - pip
           - types-requests
           - types-pyyaml
-          - pytest
-          - google-adk==0.5.0 # until https://github.com/mozilla-ai/any-agent/issues/287 is resolved
-          - any-agent[dev, all]
+        types: [python]
+        # use require_serial so that script is only called once per commit
+        require_serial: true
+        # Print the number of files as a sanity-check
+        verbose: true
 
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.4.1"
