--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,10 +6,12 @@ on:
     paths:
       - 'src/**'
       - 'tests/**'
+      - 'docs/**'
   pull_request:
     paths:
       - 'src/**'
       - 'tests/**'
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
@@ -20,6 +22,15 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
+
+      - name: Detect docs-only changes
+        id: docs_only
+        run: |
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -v '^docs/' | grep -q .; then
+            echo "docs_only=false" >> $GITHUB_OUTPUT
+          else
+            echo "docs_only=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Install the latest version of uv and set the python version to 3.11
         uses: astral-sh/setup-uv@v6
@@ -36,13 +47,15 @@ jobs:
         run: pytest -v tests/docs
 
       - name: Run Unit tests
+        if: steps.docs_only.outputs.docs_only == 'false'
         run: pytest -v tests/unit
 
       - name: Run Snapshot tests
+        if: steps.docs_only.outputs.docs_only == 'false'
         run: pytest -v tests/snapshots
 
       - name: Run Integration tests (parallel with xdist)
-        if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch' }}
+        if: steps.docs_only.outputs.docs_only == 'false' && (github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch')
         env:
           ANY_AGENT_INTEGRATION_TESTS: TRUE
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
