Update pyproject.toml (#321)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
   "mcp>=1.5.0",
   "opentelemetry-exporter-otlp",
   "opentelemetry-sdk",
-  "pydantic",
+  "pydantic==2.11.4",
   "requests",
   "rich",
   "tavily-python",
