feat(serving): Use A2A Python SDK (only on Python >=3.13) (#308)
* feat(serving): Introduce A2A server functionality and agent execution

- Added `serve_a2a` function to start the A2A server with a new application structure.
- Refactored `AnyAgent` to utilize the new serving method.
- Introduced `AnyAgentExecutor` for handling agent execution and event queuing.
- Updated `pyproject.toml` to include the new `serve` dependency.
- Removed the obsolete `task_manager.py` file to streamline the serving process.

* lint

* fix unit tests

* remove manual pip installs

* lint

* integration test

* fix: update Python requirement to >=3.11 and adjust versioning

- Changed Python requirement in `pyproject.toml` to support >=3.11.
- Updated version in `ServingConfig` from 1.0.0 to 0.1.0.
- Modified import handling in `any_agent.py` and `__init__.py` to raise appropriate errors for missing dependencies and Python version.

* lint

* update docs

* Ignore misc for untyped a2a-sdk

* Update tests.yaml

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,8 +31,7 @@ jobs:
 
       - name: Install
         run: |
-          uv sync --group tests --extra all
-          uv pip install 'git+https://github.com/google/A2A#subdirectory=samples/python'
+          uv sync --group tests --extra all --extra serve
 
       - name: Run Documentation tests
         run: pytest -v tests/docs
