--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Tests for Docs
 
 on:
   push:
@@ -6,10 +6,12 @@ on:
     paths:
       - 'src/**'
       - 'tests/**'
+      - 'docs/**'
   pull_request:
     paths:
       - 'src/**'
       - 'tests/**'
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
@@ -31,15 +33,5 @@ jobs:
         run: |
           uv sync --group tests --extra all --extra serve
 
-      - name: Run Unit tests
-        run: pytest -v tests/unit
-
-      - name: Run Snapshot tests
-        run: pytest -v tests/snapshots
-
-      - name: Run Integration tests (parallel with xdist)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-        env:
-          ANY_AGENT_INTEGRATION_TESTS: TRUE
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: pytest -v tests/integration -d --tx '4*popen//python=python'
+      - name: Run Documentation tests
+        run: pytest -v tests/docs
