--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ agno = [
 ]
 
 google = [
-  "google-adk==0.5.0" # until https://github.com/mozilla-ai/any-agent/issues/287 is resolved
+  "google-adk>=1.0.0, <2"
 ]
 
 langchain = [
