Dynamically create tools for A2A agents (#336)
* Initial implementation

* Fix lint

* Review rework

* Review rework

--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install
         run: |
-          uv sync --group tests --extra all --extra serve
+          uv sync --group tests --extra all --extra a2a
 
       - name: Run Documentation tests
         run: pytest -v tests/docs
