--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install
         run: |
-          uv sync --group tests --extra all --extra serve
+          uv sync --group tests --extra all --extra a2a
 
       - name: Run Unit tests
         run: pytest -v tests/unit
