feat(docs): Simplify `nav`. (#363)
- Move `Frameworks` and `Tools` into `agents`.
- Drop `Instructions`.
- Move `Logging` info into API Reference.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,21 +5,20 @@ repo_name: any-agent
 
 nav:
   - Intro: index.md
-  - Agents: agents.md
-  - Frameworks:
-    - Agno: frameworks/agno.md
-    - Google ADK: frameworks/google_adk.md
-    - Langchain: frameworks/langchain.md
-    - LlamaIndex: frameworks/llama_index.md
-    - OpenAI Agents SDK: frameworks/openai.md
-    - smolagents: frameworks/smolagents.md
-    - TinyAgent: frameworks/tinyagent.md
-  - Instructions: instructions.md
-  - Tools: tools.md
-  - Logging: logging.md
+  - Agents:
+    - Defining and Running Agents: agents/index.md
+    - Frameworks:
+      - Agno: agents/frameworks/agno.md
+      - Google ADK: agents/frameworks/google_adk.md
+      - Langchain: agents/frameworks/langchain.md
+      - LlamaIndex: agents/frameworks/llama_index.md
+      - OpenAI Agents SDK: agents/frameworks/openai.md
+      - smolagents: agents/frameworks/smolagents.md
+      - TinyAgent: agents/frameworks/tinyagent.md
+    - Tools: agents/tools.md
   - Tracing: tracing.md
   - Evaluation: evaluation.md
-  - Serving (A2A): serving.md
+  - Serving: serving.md
   - Cookbook:
       - Your First Agent: cookbook/your_first_agent.ipynb
       - MCP Agent: cookbook/mcp_agent.ipynb
