Pin Llama Index MCP #375

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ langchain = [
 llama_index = [
   "llama-index",
   "llama-index-llms-litellm",
-  "llama-index-tools-mcp",
+  "llama-index-tools-mcp==0.2.1",
   "platformdirs>=4.3.7",
 ]
 
