Use an Agent as a tool via A2A Cookbook (#392)
* feat(a2a): Add optional http_kwargs parameter to a2a_tool for enhanced HTTP customization

This update introduces an optional `http_kwargs` parameter to the `a2a_tool` function, allowing users to pass additional HTTP client options. This enhancement improves flexibility when making requests to A2A agents. Documentation has been updated accordingly.

* cookbook for agent as a tool (multiagent systems)

* Enhance documentation: Add new section for using an agent as a tool for another agent (A2A) in mkdocs.yml and README.md. This provides users with practical insights into building multi-agent systems.

* updates from PR comment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
       - Your First Agent: cookbook/your_first_agent.ipynb
       - MCP Agent: cookbook/mcp_agent.ipynb
       - Serve with A2A: cookbook/serve_a2a.ipynb
+      - Use an Agent as a tool for another agent (A2A): cookbook/a2a_as_tool.ipynb
   - API Reference:
     - Agent: api/agent.md
     - Config: api/config.md
