--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
 skip = *.git,*.pdf,*.svg
-ignore-words-list = assertIn, Pont, checkin
+ignore-words-list = assertIn, Pont, checkin, Espace
