refactor(tracing): Instrument at the instance level. (#435)
* refactor(tracing): Instrument at the instance level.

- Decouple `AgentTrace` generation from exporter.
- Create a single global exporter. No config.
- Drop `AnyAgent.exit`. instrument/uninstrument happens within `AnyAgent.run_async`.
- Add `instrument` argument allowing to force skip on `run` calls (use that in eval).

* fix llama_index tool_calls and remove outdated tests

* Update tests

* Fix langchain test

* Update docs

* Run updated lint

* Drop TracingConfig references

* fix openai parallel issues

* fix openai

* merge resolution

* Rename `drop_console_exporter` to `disable_console_traces` and add `enable_console_traces`.

- Add both methods to API Reference.
- Document how to disable console traces in the docs.

* Document `instrument`

* Add `SCOPE_NAME`

* Update src/any_agent/tracing/instrumentation/agno.py

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

* Update docs

* Add link to API Ref

* Update test_run_agent_twice to use `nano`

* fix lint

* Fix test_run_agent_twice to not rely on order

* fix(tinyagent): Don't hold `messages` at the instance level.

This was causing hidden issues when multiple `run_async` calls were invoked in parallel.

* Update `_running_traces` comment

* Update to respect existing trace provider

* Drop `mock_search`

---------

Co-authored-by: Nathan Brake <nathan@mozilla.ai>
Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,4 +53,4 @@ repos:
     rev: "v2.4.1"
     hooks:
       - id: codespell
-        exclude: CODE_OF_CONDUCT.md
+        exclude: CODE_OF_CONDUCT.md|tests/assets
